--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "discord-bot"
-version = "0.1.0"
+version = "0.1.1"
 description = "Discord + SQLAlchemy 2.0 + FastAPI + Strawberry"
 authors = ["TrashRoach <rfsnboris@gmail.com>"]
 license = "MIT"
@@ -11,14 +11,17 @@ python = "^3.11"
 
 "discord.py" = "^2.3.1"
 SQLAlchemy = {extras = ["asyncio"], version = "^2.0.19"}
-uvicorn = "^0.23.1"
+uvicorn = "^0.23.2"
 fastapi = "^0.100.1"
+strawberry-graphql = "^0.198.0"
 asyncpg = "^0.28.0"
-dynaconf = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.11.1"
 mypy = "*"
+poetry-dotenv-plugin = "^0.2.0"
+black = "^23.7.0"
+isort = "^5.12.0"
 
 [tool.poetry.group.test]
 [tool.poetry.group.test.dependencies]
