--- a/.env_example
+++ b/.env_example
@@ -4,5 +4,7 @@ DB_USER='postgres'
 DB_PASS='postgres'
 DB_NAME='discord_bot'
 
+LOG_LEVEL='WARN'
+
 DISCORD_BOT_TOKEN='https://discord.com/developers/applications/'
-DISCORD_BOT_PREFIX='?'
+DISCORD_BOT_PREFIX=''
